# wordle-solver-c

./: .gitignore  CMakeLists.txt  README.md  main.c  solver.c  solver.h
dataset/: wordle_tur_dict.txt  wordle_tur_freq_dict.txt
